finish course section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <ul class="page_nav">
             <li class="active"><a href="#">accueil</a></li>
             <li><a href="#about">a propos</a></li>
-            <li><a href="#">cours</a></li>
+            <li><a href="#course">cours</a></li>
             <li><a href="#">tarif</a></li>
             <li><a href="#">contact</a></li>
           </ul>
@@ -132,40 +132,119 @@
           <h1>À propos d'Apprentis Center</h1>
           <div class="about_text">
             <p>
-                Apprentis Center est un centre de soutien linguistique dédié à
-                l’apprentissage des langues. Notre mission est de fournir un
-                environnement d'apprentissage enrichissant et efficace, où chaque
-                étudiant peut développer ses compétences linguistiques à son propre
-                rythme. Que vous souhaitiez améliorer votre anglais pour des raisons
-                professionnelles ou apprendre une nouvelle langue par passion,
-                Apprentis Center est là pour vous accompagner.
-              </p>
-              <div class="avantages">
-                <p>Avantages d'étudier avec nous :</p>
-                <ul>
-                    <li><i class="fa-solid fa-circle-check"></i> <span>Cours personnalisés</span></li>
-                    <li><i class="fa-solid fa-circle-check"></i> <span>Enseignants qualifiés</span></li>
-                    <li><i class="fa-solid fa-circle-check"></i> <span>Flexibilité des horaires</span></li>
-                    <li><i class="fa-solid fa-circle-check"></i> <span>Petits groupes d'apprentissage</span></li>
-                    <li><i class="fa-solid fa-circle-check"></i> <span>Ressources pédagogiques diversifiées</span></li>
-                </ul>
-              </div>
+              Apprentis Center est un centre de soutien linguistique dédié à
+              l’apprentissage des langues. Notre mission est de fournir un
+              environnement d'apprentissage enrichissant et efficace, où chaque
+              étudiant peut développer ses compétences linguistiques à son
+              propre rythme. Que vous souhaitiez améliorer votre anglais pour
+              des raisons professionnelles ou apprendre une nouvelle langue par
+              passion, Apprentis Center est là pour vous accompagner.
+            </p>
+            <div class="avantages">
+              <p>Avantages d'étudier avec nous :</p>
+              <ul>
+                <li>
+                  <i class="fa-solid fa-circle-check"></i>
+                  <span>Cours personnalisés</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check"></i>
+                  <span>Enseignants qualifiés</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check"></i>
+                  <span>Flexibilité des horaires</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check"></i>
+                  <span>Petits groupes d'apprentissage</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check"></i>
+                  <span>Ressources pédagogiques diversifiées</span>
+                </li>
+              </ul>
+            </div>
           </div>
           <div class="about_bottom">
             <a href="#" class="btn_contact">contactez-nous</a>
             <ul>
-                <a href="#"><li><i class="fa-brands fa-instagram"></i></li></a>
-                <a href="#"><li><i class="fa-brands fa-facebook"></i></li></a>
-                <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a>
-                <a href="#"><li><i class="fa-brands fa-x-twitter"></i></li></a>
+              <a href="#"
+                ><li><i class="fa-brands fa-instagram"></i></li
+              ></a>
+              <a href="#"
+                ><li><i class="fa-brands fa-facebook"></i></li
+              ></a>
+              <a href="#"
+                ><li><i class="fa-brands fa-linkedin"></i></li
+              ></a>
+              <a href="#"
+                ><li><i class="fa-brands fa-x-twitter"></i></li
+              ></a>
             </ul>
           </div>
         </div>
         <div class="about_images">
-            <img class="main_img" src="assets/images/about-1.jpg" alt="">
-            <div class="second_img">
-                <img src="assets/images/about-2.jpg" alt="">
-                <img src="assets/images/about-3.jpg" alt="">
+          <img class="main_img" src="assets/images/about-1.jpg" alt="" />
+          <div class="second_img">
+            <img src="assets/images/about-2.jpg" alt="" />
+            <img src="assets/images/about-3.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="course_sec" id="course">
+      <div class="container">
+        <div class="title_sec">
+          <h1>Découvrez Nos Cours de Langues Adaptés à Tous</h1>
+          <p>
+            Chez Apprentis Center, nous proposons une variété de cours de
+            langues conçus pour répondre aux besoins de chaque étudiant. Que
+            vous soyez débutant ou avancé, nos programmes flexibles et
+            interactifs vous permettront d’atteindre vos objectifs linguistiques
+            à votre rythme.
+          </p>
+        </div>
+        <div class="courses">
+            <div class="single_course">
+                <img src="assets/images/course-1.jpg" alt="">
+                <div class="content_text">
+                    <span class="name_course">Français</span>
+                    <h2>Cours de Français - Niveau Débutant à Avancé</h2>
+                    <h4>Améliorez votre maîtrise de la langue française</h4>
+                    <p>Nos cours de français sont conçus pour tous les niveaux, du débutant à l'avancé. Apprenez à parler, lire et écrire en français avec confiance grâce à des méthodes interactives et des professeurs expérimentés.</p>
+                </div>                
+            </div>
+
+            <div class="single_course">
+                <img src="assets/images/course-2.jpg" alt="">
+                <div class="content_text">
+                    <span class="name_course">Anglais</span>
+                    <h2>Cours d'Anglais - Conversation et Grammaire</h2>
+                    <h4>Devenez fluent en anglais avec nos cours spécialisés</h4>
+                    <p>Que vous prépariez un examen ou que vous souhaitiez améliorer vos compétences conversationnelles, nos cours d'anglais offrent des leçons complètes adaptées à tous les niveaux, avec un accent sur la pratique et la fluidité.</p>
+                </div>           
+            </div>
+
+            <div class="single_course">
+                <img src="assets/images/course-3.jpg" alt="">
+                <div class="content_text">
+                    <span class="name_course">Espagnol</span>
+                    <h2>Cours d'Espagnol - Du débutant à l'expert</h2>
+                    <h4>Explorez la richesse de la langue espagnole</h4>
+                    <p>Nos cours d'espagnol vous aideront à maîtriser cette langue vivante et utile. Grâce à des exercices variés et des supports culturels, vous apprendrez à parler l'espagnol comme un natif.</p>
+                </div>                             
+            </div>
+
+            <div class="single_course">
+                <img src="assets/images/course-4.jpg" alt="">
+                <div class="content_text">
+                    <span class="name_course">Allemand</span>
+                    <h2>Cours d'Allemand - Pour tous les niveaux</h2>
+                    <h4>Apprenez l'allemand efficacement et avec plaisir</h4>
+                    <p>De la grammaire aux compétences conversationnelles, nos cours d'allemand sont conçus pour répondre à vos besoins spécifiques. Apprenez à comprendre et à communiquer en allemand dans divers contextes.</p>
+                </div>              
             </div>
         </div>
       </div>
