finish tarif and contact sections

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <li class="active"><a href="#">accueil</a></li>
             <li><a href="#about">a propos</a></li>
             <li><a href="#course">cours</a></li>
-            <li><a href="#">tarif</a></li>
-            <li><a href="#">contact</a></li>
+            <li><a href="#tarif">tarif</a></li>
+            <li><a href="#contact">contact</a></li>
           </ul>
           <div class="phone_nav">
             <a href="tel:0608819926"
@@ -207,62 +207,300 @@
           </p>
         </div>
         <div class="courses">
-            <div class="single_course">
-                <img src="assets/images/course-1.jpg" alt="">
-                <div class="content_text">
-                    <span class="name_course">Français</span>
-                    <h2>Cours de Français - Niveau Débutant à Avancé</h2>
-                    <h4>Améliorez votre maîtrise de la langue française</h4>
-                    <p>Nos cours de français sont conçus pour tous les niveaux, du débutant à l'avancé. Apprenez à parler, lire et écrire en français avec confiance grâce à des méthodes interactives et des professeurs expérimentés.</p>
-                </div>                
+          <div class="single_course">
+            <img src="assets/images/course-1.jpg" alt="" />
+            <div class="content_text">
+              <span class="name_course">Français</span>
+              <h2>Cours de Français - Niveau Débutant à Avancé</h2>
+              <h4>Améliorez votre maîtrise de la langue française</h4>
+              <p>
+                Nos cours de français sont conçus pour tous les niveaux, du
+                débutant à l'avancé. Apprenez à parler, lire et écrire en
+                français avec confiance grâce à des méthodes interactives et des
+                professeurs expérimentés.
+              </p>
             </div>
+          </div>
 
-            <div class="single_course">
-                <img src="assets/images/course-2.jpg" alt="">
-                <div class="content_text">
-                    <span class="name_course">Anglais</span>
-                    <h2>Cours d'Anglais - Conversation et Grammaire</h2>
-                    <h4>Devenez fluent en anglais avec nos cours spécialisés</h4>
-                    <p>Que vous prépariez un examen ou que vous souhaitiez améliorer vos compétences conversationnelles, nos cours d'anglais offrent des leçons complètes adaptées à tous les niveaux, avec un accent sur la pratique et la fluidité.</p>
-                </div>           
+          <div class="single_course">
+            <img src="assets/images/course-2.jpg" alt="" />
+            <div class="content_text">
+              <span class="name_course">Anglais</span>
+              <h2>Cours d'Anglais - Conversation et Grammaire</h2>
+              <h4>Devenez fluent en anglais avec nos cours spécialisés</h4>
+              <p>
+                Que vous prépariez un examen ou que vous souhaitiez améliorer
+                vos compétences conversationnelles, nos cours d'anglais offrent
+                des leçons complètes adaptées à tous les niveaux, avec un accent
+                sur la pratique et la fluidité.
+              </p>
             </div>
+          </div>
 
-            <div class="single_course">
-                <img src="assets/images/course-3.jpg" alt="">
-                <div class="content_text">
-                    <span class="name_course">Espagnol</span>
-                    <h2>Cours d'Espagnol - Du débutant à l'expert</h2>
-                    <h4>Explorez la richesse de la langue espagnole</h4>
-                    <p>Nos cours d'espagnol vous aideront à maîtriser cette langue vivante et utile. Grâce à des exercices variés et des supports culturels, vous apprendrez à parler l'espagnol comme un natif.</p>
-                </div>                             
+          <div class="single_course">
+            <img src="assets/images/course-3.jpg" alt="" />
+            <div class="content_text">
+              <span class="name_course">Espagnol</span>
+              <h2>Cours d'Espagnol - Du débutant à l'expert</h2>
+              <h4>Explorez la richesse de la langue espagnole</h4>
+              <p>
+                Nos cours d'espagnol vous aideront à maîtriser cette langue
+                vivante et utile. Grâce à des exercices variés et des supports
+                culturels, vous apprendrez à parler l'espagnol comme un natif.
+              </p>
             </div>
+          </div>
 
-            <div class="single_course">
-                <img src="assets/images/course-4.jpg" alt="">
-                <div class="content_text">
-                    <span class="name_course">Allemand</span>
-                    <h2>Cours d'Allemand - Pour tous les niveaux</h2>
-                    <h4>Apprenez l'allemand efficacement et avec plaisir</h4>
-                    <p>De la grammaire aux compétences conversationnelles, nos cours d'allemand sont conçus pour répondre à vos besoins spécifiques. Apprenez à comprendre et à communiquer en allemand dans divers contextes.</p>
-                </div>              
+          <div class="single_course">
+            <img src="assets/images/course-4.jpg" alt="" />
+            <div class="content_text">
+              <span class="name_course">Allemand</span>
+              <h2>Cours d'Allemand - Pour tous les niveaux</h2>
+              <h4>Apprenez l'allemand efficacement et avec plaisir</h4>
+              <p>
+                De la grammaire aux compétences conversationnelles, nos cours
+                d'allemand sont conçus pour répondre à vos besoins spécifiques.
+                Apprenez à comprendre et à communiquer en allemand dans divers
+                contextes.
+              </p>
             </div>
+          </div>
         </div>
       </div>
     </section>
 
-    <script src="/assets/js/script.js"></script>
+    <section class="tarif_sec" id="tarif">
+      <div class="container">
+        <div class="title_sec">
+          <h1>Découvrez Nos Des Tarifs Flexibles</h1>
+          <p>
+            Chez Apprentis Center, nous offrons des tarifs adaptés à vos besoins
+            d'apprentissage. Choisissez le plan qui vous convient le mieux et
+            commencez à apprendre sans contraintes financières.
+          </p>
+        </div>
+        <div class="plans mySwiper">
+          <div class="swiper-wrapper">
+            <div class="single_plan swiper-slide">
+              <div class="title_plan">
+                <img src="assets/images/icon-plan-1.svg" alt="" />
+                <h1>Single</h1>
+              </div>
+              <div class="text_plan">
+                <p>
+                  Le plan Single est idéal pour ceux qui souhaitent se
+                  concentrer sur un seul cours pour approfondir leurs
+                  connaissances linguistiques.
+                </p>
+              </div>
+              <ul>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>1 cours individuel</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Enseignants qualifiés</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Petits groupes d'apprentissage</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Ressources pédagogiques diversifiées</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Horaires flexibles</span>
+                </li>
+              </ul>
+              <div class="bottom_plan">
+                <a href="#">Commencez maintenant</a>
+              </div>
+            </div>
+
+            <div class="single_plan swiper-slide">
+              <div class="title_plan">
+                <img src="assets/images/icon-plan-2.svg" alt="" />
+                <h1>Dual</h1>
+              </div>
+              <div class="text_plan">
+                <p>
+                  Le plan Dual vous permet de suivre deux cours à la fois, idéal
+                  pour ceux qui veulent élargir leurs compétences linguistiques.
+                </p>
+              </div>
+              <ul>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>2 Cours au choix</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Enseignants qualifiés</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Petits groupes d'apprentissage</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Ressources pédagogiques diversifiées</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Horaires flexibles</span>
+                </li>
+              </ul>
+              <div class="bottom_plan">
+                <a href="#">Commencez maintenant</a>
+              </div>
+            </div>
+
+            <div class="single_plan swiper-slide">
+              <div class="title_plan">
+                <img src="assets/images/icon-plan-3.svg" alt="" />
+                <h1>Triple</h1>
+              </div>
+              <div class="text_plan">
+                <p>
+                  Avec le plan Triple, bénéficiez de trois cours pour un
+                  apprentissage intensif et une immersion totale dans les
+                  langues.
+                </p>
+              </div>
+              <ul>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>3 Cours intensifs</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Enseignants qualifiés</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Petits groupes d'apprentissage</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Ressources pédagogiques diversifiées</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Horaires flexibles</span>
+                </li>
+              </ul>
+              <div class="bottom_plan">
+                <a href="#">Commencez maintenant</a>
+              </div>
+            </div>
+
+            <div class="single_plan swiper-slide">
+              <div class="title_plan">
+                <img src="assets/images/icon-plan-4.svg" alt="" />
+                <h1>Unlimited</h1>
+              </div>
+              <div class="text_plan">
+                <p>
+                  Le plan Unlimited vous offre un accès illimité à tous nos
+                  cours, parfait pour ceux qui veulent maîtriser plusieurs
+                  langues.
+                </p>
+              </div>
+              <ul>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Accès illimité à tous les cours</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Enseignants qualifiés</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Petits groupes d'apprentissage</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Ressources pédagogiques diversifiées</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Horaires flexibles</span>
+                </li>
+              </ul>
+              <div class="bottom_plan">
+                <a href="#">Commencez maintenant</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact_sec" id="contact">
+      <div class="container">
+        <div class="title_sec">
+          <h1>Contactez-nous</h1>
+          <p>
+            Nous sommes là pour répondre à toutes vos questions et vous aider à
+            choisir le meilleur parcours d'apprentissage. N'hésitez pas à nous
+            contacter pour plus d'informations ou pour planifier une visite de
+            notre centre.
+          </p>
+        </div>
+        <ul class="icons_contact">
+          <li>
+            <span class="icons"><i class="fa-solid fa-location-dot"></i></span>
+            <span>En face de d'Issaf 2222 El Jadida</span>
+          </li>
+          <li>
+            <span class="icons"><i class="fa-solid fa-envelope"></i></span>
+            <span>apprentis@info.com</span>
+          </li>
+          <li>
+            <span class="icons"><i class="fa-solid fa-phone"></i></span>
+            <span>+212 608 819 926</span>
+          </li>
+        </ul>
+        <div class="contact_form">
+          <div class="content_contact">
+            <p>
+              Nous sommes à votre écoute ! Remplissez simplement le formulaire
+              ci-contre, et notre équipe vous répondra dans les plus brefs
+              délais.
+            </p>
+            <form action="">
+              <div class="two_inputs">
+                <input type="text" placeholder="Votre Nom" autofocus>
+                <input type="text" placeholder="Votre Email">
+              </div>
+              <div class="one_input">
+                <input type="text" placeholder="Sujet">
+              </div>
+              <div class="one_input">
+                <textarea placeholder="Message" cols="30" rows="10"></textarea>
+              </div>
+              <button type="submit">Envoyer</button>
+            </form>
+          </div>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3337.530618969277!2d-8.494183724715073!3d33.22639966088578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda91f2aa03ac2ad%3A0x47897a248e896926!2scentre%20apprentis!5e0!3m2!1sfr!2sma!4v1724612423788!5m2!1sfr!2sma"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </div>
+    </section>
+
+    <!-- link js  -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-      var swiper = new Swiper(".mySwiper", {
-        pagination: {
-          el: ".swiper-pagination",
-          dynamicBullests: true,
-        },
-        // autoplay: {
-        //   delay: 2500,
-        // },
-        loop: true,
-      });
-    </script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
