--- a/index.html
+++ b/index.html
@@ -499,6 +499,64 @@
       </div>
     </section>
 
+    <footer>
+      <div class="container">
+        <div class="footer_sections">
+          <div class="footer_single_sec">
+            <h1>Entrer en contact</h1>
+            <div class="content">
+              <ul class="contact_info">
+                <li><i class="fa-solid fa-location-dot"></i>  <span>En face de d'Issaf 2222 El Jadida</span></li>
+                <li><i class="fa-solid fa-envelope"></i> <span>apprentis@info.com</span></li>
+                <li><i class="fa-solid fa-phone"></i> <span>+212 608 819 926</span></li>
+              </ul>
+              <ul class="social_links">
+                <a href="#"><li><i class="fa-brands fa-instagram"></i></li></a>
+                <a href="#"><li><i class="fa-brands fa-facebook"></i></li></a>
+                <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a>
+                <a href="#"><li><i class="fa-brands fa-x-twitter"></i></li></a>
+              </ul>
+            </div>
+          </div>
+  
+          <div class="footer_single_sec">
+            <h1>Liens Rapides</h1>
+            <ul class="quick_links">
+              <li><i class="fa-solid fa-chevron-right"></i> <a href="#">accueil</a></li>
+              <li><i class="fa-solid fa-chevron-right"></i> <a href="#">a propos</a></li>
+              <li><i class="fa-solid fa-chevron-right"></i> <a href="#">cours</a></li>
+              <li><i class="fa-solid fa-chevron-right"></i> <a href="#">taris</a></li>
+              <li><i class="fa-solid fa-chevron-right"></i> <a href="#">contact</a></li>
+            </ul>
+          </div>
+
+          <div class="footer_single_sec">
+            <h1>Cours</h1>
+            <ul class="quick_links">
+              <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Cours de Français</a></li>
+              <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Cours d'Anglais</a></li>
+              <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Cours d'Espagnol</a></li>
+              <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Cours d'Allemand</a></li>
+          </div>
+  
+          <div class="footer_single_sec">
+            <h1>Galerie de photos</h1>
+            <div class="gallery">
+              <img src="assets/images/gallery/1.jpg" alt="">
+              <img src="assets/images/gallery/2.jpg" alt="">
+              <img src="assets/images/gallery/3.jpg" alt="">
+              <img src="assets/images/gallery/4.jpg" alt="">
+              <img src="assets/images/gallery/5.jpg" alt="">
+              <img src="assets/images/gallery/6.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="bottom_footer">
+          <p>&copy; <span>Apprentis</span>, All Right Reserved. Designed By <a href="#">Yassine_ChM</a></p>
+        </div>
+      </div>
+    </footer>
+
     <!-- link js  -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
