add price to tarif section

--- a/index.html
+++ b/index.html
@@ -293,6 +293,10 @@
                   connaissances linguistiques.
                 </p>
               </div>
+              <div class="price">
+                <h2>500 Dhs</h2>
+                <h4>/ mois</h4>
+              </div>
               <ul>
                 <li>
                   <i class="fa-solid fa-check"></i>
@@ -330,6 +334,10 @@
                   Le plan Dual vous permet de suivre deux cours à la fois, idéal
                   pour ceux qui veulent élargir leurs compétences linguistiques.
                 </p>
+              </div>
+              <div class="price">
+                <h2>800 Dhs</h2>
+                <h4>/ mois</h4>
               </div>
               <ul>
                 <li>
@@ -370,6 +378,10 @@
                   langues.
                 </p>
               </div>
+              <div class="price">
+                <h2>900 Dhs</h2>
+                <h4>/ mois</h4>
+              </div>
               <ul>
                 <li>
                   <i class="fa-solid fa-check"></i>
@@ -408,6 +420,10 @@
                   cours, parfait pour ceux qui veulent maîtriser plusieurs
                   langues.
                 </p>
+              </div>
+              <div class="price">
+                <h2>1500 Dhs</h2>
+                <h4>/ mois</h4>
               </div>
               <ul>
                 <li>
