custom link css

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Apprentis - Votre centre de langues</title>
 
     <!-- icon -->
-    <link rel="icon" href="/assets/images/logo/logo.png" />
+    <link rel="icon" href="assets/images/logo/logo.png" />
 
     <!-- link to file css -->
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
