--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     />
   </head>
   <body>
+
+    <div id="loader-container">
+      <span class="loader"></span>
+    </div>    
+
     <header>
       <div class="top_header">
         <div class="container">
@@ -58,7 +63,7 @@
       </div>
       <nav>
         <div class="container">
-          <a href="#" class="logo">
+          <a href="index.html" class="logo">
             <img src="assets/images/logo/logo.png" alt="" />
             <h1>apprentis center</h1>
           </a>
@@ -71,7 +76,7 @@
               <div class="close_menu"><i onclick="close_menu()" class="fa-solid fa-xmark"></i></div>
               <div class="bg_overlay" onclick="close_menu()"></div>
             </div>
-            <li class="active"><a href="#">accueil</a></li>
+            <li class="active"><a href="index.html">accueil</a></li>
             <li><a href="#about">a propos</a></li>
             <li><a href="#course">cours</a></li>
             <li><a href="#tarif">tarif</a></li>
