config the contact form

--- a/index.html
+++ b/index.html
@@ -502,9 +502,9 @@
               ci-contre, et notre équipe vous répondra dans les plus brefs
               délais.
             </p>
-            <form onsubmit="sendEmail(); return false;">
+            <form>
               <div class="two_inputs">
-                <input type="text" id="name" placeholder="Votre Nom" autofocus>
+                <input type="text" id="name" placeholder="Votre Nom">
                 <input type="text" id="email" placeholder="Votre Email">
               </div>
               <div class="one_input">
